[build-system]
requires = ["setuptools>=80.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GreeMQTT"
version = "1.5.2"
description = "MQTT bridge for Gree devices"
authors = [
    { name = "monteship", email = "monteship@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gree", "mqtt", "home-assistant"]

requires-python = ">=3.12"
dependencies = [
    "structlog~=25.3.0",
    "aiomqtt==2.4.0",
    "python-dotenv~=1.1.0",
    "crypto~=1.4.1",
    "pycryptodome~=3.22.0",
    "cryptography~=44.0.3",
    "tqdm~=4.67.1",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/monteship/GreeMQTT"

[project.scripts]
GreeMQTT = "GreeMQTT.__main__:main"

[tool.setuptools]
packages = ["GreeMQTT"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

